option optimize_for = LITE_RUNTIME;

message ResponseCode{
  optional bool error  = 1;
  optional uint32 code = 2;
}

message Filter {
  message FilterComponent {
    enum Operation {
      Equal = 1;
      NotEqual = 2;
      LessThen = 3;
    }
    required bytes lvalue = 1;
    required Operation operation = 2;
    required bytes rvalue = 3;
  }
  repeated FilterComponent component = 1;
}

message Limits {
	required uint32 count = 1;
	required uint32 offset = 2;
}

message OrderBy {
  
}


message DateTime{
  message Unix{
    required fixed64 d = 1;
  }
  
  message Text{
    required string date_string = 1;
  }
  
  message Date{
    optional uint32 year = 1;
    optional uint32 month = 2;
    optional uint32 day = 3;
    optional uint32 hour = 4;
    optional uint32 minute =5;
    optional uint32 sec = 6;
  }
  
  oneof d {
    Unix unix = 1;
    Text text = 2;
    Date date = 3;
  }
}

message Event{
  required fixed64 timestamp = 1;
}

message TimeLine{
  repeated Event event = 1;
}